modified:   README.md 	modified:   app/app.global.css 	modified:   app/components/App.css 	modified:   app/components/FileManager.js 	modified:   app/components/List.js 	modified:   app/components/SignUp.js 	modified:   app/components/index.css 	modified:   app/components/utils/walkFolders.js 	modified:   app/constants/routes.json 	modified:   internals/img/eslint.png 	modified:   internals/img/flow.png 	modified:   internals/img/js.png 	modified:   internals/img/npm.png 	modified:   internals/img/react.png 	modified:   internals/img/redux.png 	modified:   internals/img/webpack.png 	modified:   resources/icon.png 	modified:   resources/icons/1024x1024.png 	modified:   resources/icons/128x128.png 	modified:   resources/icons/16x16.png 	modified:   resources/icons/24x24.png 	modified:   resources/icons/256x256.png 	modified:   resources/icons/32x32.png 	modified:   resources/icons/48x48.png 	modified:   resources/icons/512x512.png 	modified:   resources/icons/64x64.png 	modified:   resources/icons/96x96.png

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -2,7 +2,7 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
-@import "~@fortawesome/fontawesome-free/css/all.css";
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 /* body {
   position: relative;
@@ -46,4 +46,32 @@ a:hover {
 }
 .folder-button {
   margin: 0.2rem 1rem;
+}
+.loader {
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid #3498db;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
